--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "vivid-studio": "^0.12.0"
   }
 }
